@@ -1,9 +1,13 @@
 package com.zokkymon.launcher;
 
 import org.json.JSONObject;
+import java.io.File;
 import java.io.InputStream;
 import java.io.IOException;
 import java.nio.file.*;
+import java.net.URI;
+import java.util.Locale;
+import java.util.Set;
 
 public class ConfigManager {
 
@@ -13,319 +17,382 @@ public class ConfigManager {
             + System.getProperty("file.separator") + "config"
             + System.getProperty("file.separator") + "launcher_config.json";
 
-    private JSONObject config;
+    /**
+     * Clés dont la valeur de référence est toujours celle du JAR.
+     * Elles ne sont jamais écrites dans le fichier utilisateur.
+     */
+    private static final Set<String> JAR_KEYS = Set.of(
+        "launcherVersion", "launcherInfoUrl", "modpackInfoUrl", "serverUrl",
+        "modpackName", "fabricVersion", "minecraftVersion", "enableVersionCheck",
+        "msaClientId", "launcherExeName"
+    );
+
+    /** Clés obsolètes retirées du fichier utilisateur au premier chargement. */
+    private static final Set<String> DEPRECATED_KEYS = Set.of("modpackVersion");
+
+    /** Config système — chargée depuis le JAR, jamais écrite sur disque. */
+    private JSONObject jarConfig;
+
+    /** Config utilisateur — préférences et données propres à la machine. */
+    private JSONObject userConfig;
 
     @SuppressWarnings("this-escape")
     public ConfigManager() {
-        loadConfig();
+        loadJarConfig();
+        loadUserConfig();
     }
 
-    private void loadConfig() {
-        try {
-            Path configPath = Paths.get(CONFIG_PATH);
-            // Migration : ancien emplacement ~/.zokkymon/launcher_config.json → ~/.zokkymon/config/
-            String oldPath = System.getProperty("user.home") + System.getProperty("file.separator")
-                    + ".zokkymon" + System.getProperty("file.separator") + "launcher_config.json";
-            Path oldConfigPath = Paths.get(oldPath);
-            if (!Files.exists(configPath) && Files.exists(oldConfigPath)) {
+    // ── Chargement ────────────────────────────────────────────────────────────
+
+    private void loadJarConfig() {
+        try (InputStream is = getClass().getResourceAsStream("/launcher_config.json")) {
+            if (is != null) {
+                jarConfig = new JSONObject(new String(is.readAllBytes()));
+            } else {
+                jarConfig = new JSONObject();
+                System.err.println("[WARN] Config embarquée introuvable dans le JAR");
+            }
+        } catch (IOException e) {
+            jarConfig = new JSONObject();
+            System.err.println("[ERR] Lecture config JAR : " + e.getMessage());
+        }
+    }
+
+    private void loadUserConfig() {
+        Path configPath = Paths.get(CONFIG_PATH);
+        // Migration : ancien emplacement ~/.zokkymon/launcher_config.json → ~/.zokkymon/config/
+        String oldPath = System.getProperty("user.home") + System.getProperty("file.separator")
+                + ".zokkymon" + System.getProperty("file.separator") + "launcher_config.json";
+        Path oldConfigPath = Paths.get(oldPath);
+        if (!Files.exists(configPath) && Files.exists(oldConfigPath)) {
+            try {
                 Files.createDirectories(configPath.getParent());
                 Files.move(oldConfigPath, configPath);
                 System.out.println("[INFO] launcher_config.json migré vers " + configPath);
+            } catch (IOException e) {
+                System.err.println("[WARN] Migration impossible : " + e.getMessage());
             }
-
-            if (Files.exists(configPath)) {
-                String content = new String(Files.readAllBytes(configPath));
-                config = new JSONObject(content);
-                // Fusionner les clés manquantes depuis la config embarquée dans le JAR
-                mergeEmbeddedConfig();
-            } else {
-                // Pas de fichier externe : charger la config embarquée dans le JAR
-                loadEmbeddedConfig();
-            }
-        } catch (IOException e) {
-            System.err.println("Erreur lors de la lecture de la config : " + e.getMessage());
-            loadEmbeddedConfig();
         }
-    }
 
-    /**
-     * Complète la config locale avec les clés présentes dans la config embarquée
-     * mais absentes du fichier local (ex: modpackToken, launcherInfoUrl...).
-     * Les valeurs existantes dans le fichier local ne sont jamais écrasées.
-     */
-    private void mergeEmbeddedConfig() {
-        try (InputStream is = getClass().getResourceAsStream("/launcher_config.json")) {
-            if (is == null) return;
-            JSONObject embedded = new JSONObject(new String(is.readAllBytes()));
-            boolean changed = false;
-            for (String key : embedded.keySet()) {
-                if (!config.has(key) || config.optString(key, "").trim().isEmpty()) {
-                    // Ne pas écraser installPath avec celui de la machine de build
-                    if ("installPath".equals(key)) continue;
-                    config.put(key, embedded.get(key));
-                    changed = true;
+        if (Files.exists(configPath)) {
+            try {
+                JSONObject raw = new JSONObject(new String(Files.readAllBytes(configPath)));
+                userConfig = new JSONObject();
+                boolean cleaned = false;
+                // Copie uniquement les clés utilisateur — retire les clés JAR et obsolètes si elles traînent
+                for (String key : raw.keySet()) {
+                    if (JAR_KEYS.contains(key) || DEPRECATED_KEYS.contains(key)) {
+                        cleaned = true;
+                    } else {
+                        userConfig.put(key, raw.get(key));
+                    }
                 }
-            }
-            if (changed) {
-                System.out.println("[INFO] Config locale complétée depuis la config embarquée.");
+                if (cleaned) {
+                    System.out.println("[INFO] Clés système retirées du fichier utilisateur.");
+                    saveConfig();
+                }
+            } catch (IOException e) {
+                System.err.println("[ERR] Lecture config utilisateur : " + e.getMessage());
+                userConfig = defaultUserConfig();
                 saveConfig();
             }
-        } catch (IOException e) {
-            System.err.println("Erreur lors de la fusion de la config embarquée : " + e.getMessage());
+        } else {
+            userConfig = defaultUserConfig();
+            saveConfig();
         }
     }
 
-    private void loadEmbeddedConfig() {
-        try (InputStream is = getClass().getResourceAsStream("/launcher_config.json")) {
-            if (is != null) {
-                String content = new String(is.readAllBytes());
-                config = new JSONObject(content);
-                // On normalise le installPath avec le home réel de cette machine
-                String defaultInstall = System.getProperty("user.home")
-                        + System.getProperty("file.separator") + ".zokkymon";
-                config.put("installPath", defaultInstall);
-                System.out.println("[INFO] Config embarquée chargée depuis le JAR.");
-                saveConfig(); // écrire le fichier externe pour les prochains lancements
-            } else {
-                System.out.println("[WARN] Aucune config embarquée trouvée, génération des valeurs par défaut.");
-                createDefaultConfig();
-            }
-        } catch (IOException e) {
-            System.err.println("Erreur lecture config embarquée : " + e.getMessage());
-            createDefaultConfig();
-        }
-    }
-
-    private void createDefaultConfig() {
-        config = new JSONObject();
-        config.put("serverUrl", "http://localhost:8080");
-        config.put("minecraftVersion", "1.21.1");
-        config.put("fabricVersion", "0.18.1");
-        config.put("modpackName", "Zokkymon");
-        config.put("launcherVersion", "0.1.0");
-        config.put("language", "fr");
-        config.put("ram", "6 Go");
-        // URL publique fournissant les métadonnées de mise à jour du launcher (version, url, sha256)
-        config.put("launcherInfoUrl", "");
-        // URL du endpoint modpack info.json
-        config.put("modpackInfoUrl", "https://zokkyen-cobblemon.ddns.net/modpack/info.json");
-        // Token pour authentifier les téléchargements du modpack
-        config.put("modpackToken", "");
-        // Nom de l'exécutable du launcher attendu (utilisé pour remplacer le binaire)
-        config.put("launcherExeName", "ZokkymonLauncher.exe");
-        // Default install path: use user home + .zokkymon folder
-        String installPath = System.getProperty("user.home") + System.getProperty("file.separator") + ".zokkymon";
-        config.put("installPath", installPath);
-        config.put("enableVersionCheck", true);
-        saveConfig();
+    private JSONObject defaultUserConfig() {
+        JSONObject u = new JSONObject();
+        u.put("installPath", System.getProperty("user.home")
+                + System.getProperty("file.separator") + ".zokkymon");
+        u.put("ram", "6 Go");
+        u.put("language", "fr");
+        u.put("darkMode", true);
+        u.put("launcherChannel", inferDefaultChannel());
+        u.put("launchProfile", "performance");
+        u.put("customJvmArgs", "");
+        return u;
     }
 
     public void saveConfig() {
         try {
             Path configPath = Paths.get(CONFIG_PATH);
-            Files.createDirectories(configPath.getParent()); // crée ~/.zokkymon/ si absent
-            Files.write(configPath, config.toString(2).getBytes());
+            Files.createDirectories(configPath.getParent());
+            Files.write(configPath, userConfig.toString(2).getBytes());
         } catch (IOException e) {
-            System.err.println("Erreur lors de la sauvegarde de la config : " + e.getMessage());
+            System.err.println("[ERR] Sauvegarde config : " + e.getMessage());
         }
     }
 
-    public String getServerUrl() {
-        return config.getString("serverUrl");
-    }
+    // ── Getters JAR — lecture seule, non modifiables par l'utilisateur ─────────
 
-    public String getMinecraftVersion() {
-        return config.getString("minecraftVersion");
-    }
+    public String getLauncherVersion()  { return jarConfig.optString("launcherVersion", "0.1.0"); }
+    public String getServerUrl()        { return jarConfig.optString("serverUrl", ""); }
+    public String getMinecraftVersion() { return jarConfig.optString("minecraftVersion", "1.21.1"); }
+    public String getFabricVersion()    { return jarConfig.optString("fabricVersion", "0.18.1"); }
+    public String getModpackName()      { return jarConfig.optString("modpackName", "Zokkymon"); }
+    public String getLauncherExeName()  { return jarConfig.optString("launcherExeName", "ZokkymonLauncher.exe"); }
+    public String getModpackInfoUrl()   { return jarConfig.optString("modpackInfoUrl", ""); }
+    public boolean isVersionCheckEnabled() { return jarConfig.optBoolean("enableVersionCheck", true); }
 
-    public String getFabricVersion() {
-        return config.getString("fabricVersion");
-    }
-
-    public String getModpackName() {
-        return config.getString("modpackName");
-    }
-
-    public String getRamAllocation() {
-        // Normalise l'ancienne syntaxe "6Go" → "6 Go" pour compatibilité
-        String ram = config.getString("ram");
-        if (ram != null && ram.matches("\\d+Go")) {
-            ram = ram.replace("Go", " Go");
-        }
-        return ram;
-    }
-
-    public String getInstallPath() {
-        return config.optString("installPath", System.getProperty("user.home") + System.getProperty("file.separator") + ".zokkymon");
-    }
-
-    public void setServerUrl(String url) {
-        config.put("serverUrl", url);
-        saveConfig();
-    }
-
-    public void setRamAllocation(String ram) {
-        config.put("ram", ram);
-        saveConfig();
-    }
-
-    public void setInstallPath(String path) {
-        config.put("installPath", path);
-        saveConfig();
-    }
-
-    public JSONObject getConfig() {
-        return config;
-    }
-
-    public String getLauncherVersion() {
-        // Lire depuis launcher_config.json seulement (local_version.json est pour le modpack)
-        return config.optString("launcherVersion", "0.1.0");
-    }
-
-    public void setLauncherVersion(String version) {
-        config.put("launcherVersion", version);
-        saveConfig();
-    }
-
-    public String getLanguage() {
-        String lang = config.optString("language", "fr");
-        // Garantir que la langue a une valeur valide
-        if (lang == null || lang.trim().isEmpty()) {
-            return "fr";
-        }
-        return lang;
-    }
-
-    public void setLanguage(String lang) {
-        config.put("language", lang);
-        saveConfig();
+    public String getClientId() {
+        return jarConfig.optString("msaClientId", "").strip();
     }
 
     public String getLauncherInfoUrl() {
-        // If explicitly set in config, use it; otherwise fall back to serverUrl + /launcher/info.json
-        String u = config.optString("launcherInfoUrl", "");
-        if (u != null && !u.trim().isEmpty()) return u;
+        String u = jarConfig.optString("launcherInfoUrl", "");
+        if (!u.isBlank()) {
+            return mapLauncherInfoUrlForChannel(u, getLauncherChannel());
+        }
         String server = getServerUrl();
         return server + (server.endsWith("/") ? "" : "/") + "launcher/info.json";
     }
 
-    public String getLauncherExeName() {
-        return config.optString("launcherExeName", "ZokkymonLauncher.exe");
+    public String getLauncherChannel() {
+        String c = userConfig.optString("launcherChannel", "").toLowerCase(Locale.ROOT).trim();
+        if ("beta".equals(c)) return "beta";
+        if ("stable".equals(c) || "main".equals(c)) return "stable";
+        return inferDefaultChannel();
     }
 
-    public String getModpackInfoUrl() {
-        return config.optString("modpackInfoUrl", "https://zokkyen-cobblemon.ddns.net/modpack/info.json");
+    public void setLauncherChannel(String channel) {
+        String normalized = "beta".equalsIgnoreCase(channel) ? "beta" : "stable";
+        userConfig.put("launcherChannel", normalized);
+        saveConfig();
     }
+
+    private String inferDefaultChannel() {
+        String url = jarConfig.optString("launcherInfoUrl", "").toLowerCase(Locale.ROOT);
+        if (url.contains("/beta/")) return "beta";
+        return "stable";
+    }
+
+    private String mapLauncherInfoUrlForChannel(String originalUrl, String channel) {
+        String targetBranch = "beta".equals(channel) ? "beta" : "main";
+        try {
+            URI uri = URI.create(originalUrl);
+            String host = uri.getHost();
+            String path = uri.getPath();
+            if (host == null || path == null) return originalUrl;
+            if (!"raw.githubusercontent.com".equalsIgnoreCase(host)) return originalUrl;
+
+            String[] parts = path.split("/");
+            // path attendu : /owner/repo/branch/...
+            if (parts.length < 5) return originalUrl;
+            parts[3] = targetBranch;
+
+            StringBuilder rebuiltPath = new StringBuilder();
+            for (String p : parts) {
+                if (p == null || p.isEmpty()) continue;
+                rebuiltPath.append('/').append(p);
+            }
+
+            URI mapped = new URI(
+                uri.getScheme(),
+                uri.getUserInfo(),
+                uri.getHost(),
+                uri.getPort(),
+                rebuiltPath.toString(),
+                uri.getQuery(),
+                uri.getFragment()
+            );
+            return mapped.toString();
+        } catch (Exception ignored) {
+            return originalUrl;
+        }
+    }
+
+    /**
+     * No-op : la version du launcher est toujours celle du JAR.
+     * Conservé pour compatibilité avec Updater (auto-update via script PS).
+     */
+    public void setLauncherVersion(String version) {}
+
+    // ── modpackToken : source JAR, copie chiffrée dans userConfig ─────────────
 
     public String getModpackToken() {
-        String raw = config.optString("modpackToken", "");
-        if (raw.isBlank()) return "";
-        if (SecureStorage.looksEncrypted(raw)) {
+        // 1. Copie chiffrée déjà dans userConfig ?
+        String raw = userConfig.optString("modpackToken", "");
+        if (!raw.isBlank() && SecureStorage.looksEncrypted(raw)) {
             String decrypted = SecureStorage.decrypt(raw);
             return decrypted != null ? decrypted : "";
         }
-        // Valeur en clair (ex : premier lancement depuis le JAR) → on chiffre immédiatement
-        try {
-            String enc = SecureStorage.encrypt(raw);
-            if (enc != null) { config.put("modpackToken", enc); saveConfig(); }
-        } catch (Exception ignored) {}
-        return raw;
+        // 2. Lire depuis JAR et chiffrer immédiatement dans userConfig
+        String plain = jarConfig.optString("modpackToken", "");
+        if (!plain.isBlank()) {
+            try {
+                String enc = SecureStorage.encrypt(plain);
+                if (enc != null) { userConfig.put("modpackToken", enc); saveConfig(); }
+            } catch (Exception ignored) {}
+            return plain;
+        }
+        return "";
     }
 
     public void setModpackToken(String token) {
         try {
             String enc = SecureStorage.encrypt(token);
-            config.put("modpackToken", enc != null ? enc : token);
+            userConfig.put("modpackToken", enc != null ? enc : token);
         } catch (Exception e) {
-            config.put("modpackToken", token);
+            userConfig.put("modpackToken", token);
         }
         saveConfig();
     }
 
-    public boolean isDarkMode() {
-        return config.optBoolean("darkMode", true);
+    // ── Getters/Setters utilisateur ───────────────────────────────────────────
+
+    public String getInstallPath() {
+        return userConfig.optString("installPath",
+                System.getProperty("user.home") + System.getProperty("file.separator") + ".zokkymon");
     }
 
-    public void setDarkMode(boolean dark) {
-        config.put("darkMode", dark);
+    public void setInstallPath(String path) {
+        userConfig.put("installPath", path);
         saveConfig();
     }
 
+    public String getRamAllocation() {
+        String ram = userConfig.optString("ram", "6 Go");
+        if (ram != null && ram.matches("\\d+Go")) ram = ram.replace("Go", " Go");
+        return ram;
+    }
+
+    public void setRamAllocation(String ram) {
+        userConfig.put("ram", ram);
+        saveConfig();
+    }
+
+    public String getLanguage() {
+        String lang = userConfig.optString("language", "fr");
+        return (lang == null || lang.isBlank()) ? "fr" : lang;
+    }
+
+    public void setLanguage(String lang) {
+        userConfig.put("language", lang);
+        saveConfig();
+    }
+
+    public boolean isDarkMode()          { return userConfig.optBoolean("darkMode", true); }
+    public void setDarkMode(boolean dark) { userConfig.put("darkMode", dark); saveConfig(); }
+
+    /**
+     * Détecte la version installée en cherchant le dossier {@code zokkymon_v*} le plus récent
+     * dans le répertoire d'installation. Aucune donnée stockée en config.
+     */
     public String getModpackVersion() {
-        return config.optString("modpackVersion", "");
+        File installDir = new File(getInstallPath());
+        File[] dirs = installDir.listFiles(
+                f -> f.isDirectory() && f.getName().startsWith("zokkymon_v"));
+        if (dirs == null || dirs.length == 0) return "";
+        java.util.Arrays.sort(dirs);
+        return dirs[dirs.length - 1].getName().replace("zokkymon_v", "");
     }
 
-    public void setModpackVersion(String version) {
-        config.put("modpackVersion", version);
-        saveConfig();
-    }
+    /** No-op : la version est désormais dérivée du nom de dossier sur disque. */
+    public void setModpackVersion(String version) {}
 
     // ── MSA (Microsoft Authentication) ───────────────────────────────────────
 
-    /** Retourne true si un profil Microsoft a été enregistré. */
     public boolean hasMsaProfile() {
         return !getMsaUsername().isEmpty() && !getMsaRefreshToken().isEmpty();
     }
 
-    public String getMsaUsername()    { return config.optString("msaUsername",    ""); }
-    public String getMsaUuid()        { return config.optString("msaUuid",        ""); }
+    public String getMsaUsername() { return userConfig.optString("msaUsername", ""); }
+    public String getMsaUuid()     { return userConfig.optString("msaUuid",     ""); }
+    public long   getMsaExpiresAt(){ return userConfig.optLong("msaExpiresAt",  0L); }
 
     public String getMsaAccessToken() {
-        String raw = config.optString("msaAccessToken", "");
+        String raw = userConfig.optString("msaAccessToken", "");
         if (raw.isBlank()) return "";
-        // Migration transparente : si la valeur est chiffrée, on déchiffre ; sinon (ancien format
-        // en clair) on retourne null pour forcer une reconnexion propre.
         if (SecureStorage.looksEncrypted(raw)) {
             String decrypted = SecureStorage.decrypt(raw);
             return decrypted != null ? decrypted : "";
         }
-        return ""; // valeur en clair (ancien format) → forcer re-login
+        return ""; // ancienne valeur en clair → forcer re-login
     }
 
     public String getMsaRefreshToken() {
-        String raw = config.optString("msaRefreshToken", "");
+        String raw = userConfig.optString("msaRefreshToken", "");
         if (raw.isBlank()) return "";
         if (SecureStorage.looksEncrypted(raw)) {
             String decrypted = SecureStorage.decrypt(raw);
             return decrypted != null ? decrypted : "";
         }
-        return ""; // valeur en clair (ancien format) → forcer re-login
-    }
-
-    public long   getMsaExpiresAt()   { return config.optLong("msaExpiresAt",     0L); }
-
-    /** Retourne le Client ID Azure lu depuis la config (champ {@code msaClientId}). */
-    public String getClientId() {
-        return config.optString("msaClientId", "").strip();
+        return ""; // ancienne valeur en clair → forcer re-login
     }
 
     /** Persiste le profil complet obtenu après une authentification réussie.
      *  Les tokens sont chiffrés via {@link SecureStorage} avant d'être écrits sur disque. */
     public void saveMsaProfile(MicrosoftAuth.McProfile p) {
-        config.put("msaUsername", p.username);
-        config.put("msaUuid",     p.uuid);
-        config.put("msaExpiresAt", p.expiresAtMs);
+        userConfig.put("msaUsername",  p.username);
+        userConfig.put("msaUuid",      p.uuid);
+        userConfig.put("msaExpiresAt", p.expiresAtMs);
         try {
-            config.put("msaAccessToken",  SecureStorage.encrypt(p.accessToken));
-            config.put("msaRefreshToken", SecureStorage.encrypt(p.refreshToken));
+            userConfig.put("msaAccessToken",  SecureStorage.encrypt(p.accessToken));
+            userConfig.put("msaRefreshToken", SecureStorage.encrypt(p.refreshToken));
         } catch (Exception e) {
-            // Si le chiffrement échoue (cas très rare), on stocke quand même pour ne pas
-            // bloquer la session — mais on prévient dans la console.
             System.err.println("[WARN] Impossible de chiffrer les tokens MSA : " + e.getMessage());
-            config.put("msaAccessToken",  p.accessToken);
-            config.put("msaRefreshToken", p.refreshToken);
+            userConfig.put("msaAccessToken",  p.accessToken);
+            userConfig.put("msaRefreshToken", p.refreshToken);
         }
         saveConfig();
     }
 
     /** Supprime toutes les données MSA (déconnexion). */
     public void clearMsaProfile() {
-        config.remove("msaUsername");
-        config.remove("msaUuid");
-        config.remove("msaAccessToken");
-        config.remove("msaRefreshToken");
-        config.remove("msaExpiresAt");
+        userConfig.remove("msaUsername");
+        userConfig.remove("msaUuid");
+        userConfig.remove("msaAccessToken");
+        userConfig.remove("msaRefreshToken");
+        userConfig.remove("msaExpiresAt");
+        saveConfig();
+    }
+
+    // ── Résolution de la fenêtre Minecraft ───────────────────────────────────
+    public int getWindowWidth()  { return userConfig.optInt("windowWidth",  1280); }
+    public int getWindowHeight() { return userConfig.optInt("windowHeight",  720); }
+    public boolean isFullscreen() { return userConfig.optBoolean("fullscreen", false); }
+
+    public void setWindowSize(int width, int height) {
+        userConfig.put("windowWidth",  width);
+        userConfig.put("windowHeight", height);
+        saveConfig();
+    }
+
+    public void setFullscreen(boolean fullscreen) {
+        userConfig.put("fullscreen", fullscreen);
+        saveConfig();
+    }
+
+    // ── Profils de lancement / JVM args ─────────────────────────────────────
+    public String getLaunchProfile() {
+        String p = userConfig.optString("launchProfile", "performance").toLowerCase(Locale.ROOT).trim();
+        return switch (p) {
+            case "quality", "qualite" -> "quality";
+            case "low-end", "lowend" -> "low-end";
+            case "custom" -> "custom";
+            default -> "performance";
+        };
+    }
+
+    public void setLaunchProfile(String profile) {
+        String normalized = switch (profile == null ? "" : profile.toLowerCase(Locale.ROOT).trim()) {
+            case "quality", "qualite" -> "quality";
+            case "low-end", "lowend" -> "low-end";
+            case "custom" -> "custom";
+            default -> "performance";
+        };
+        userConfig.put("launchProfile", normalized);
+        saveConfig();
+    }
+
+    public String getCustomJvmArgs() {
+        return userConfig.optString("customJvmArgs", "").trim();
+    }
+
+    public void setCustomJvmArgs(String args) {
+        userConfig.put("customJvmArgs", args == null ? "" : args.trim());
         saveConfig();
     }
 }
